dev-capec/force-app/main/default/objects/Doacao__c/Doacao__c.object-meta.xml
<CustomObject>
    <label>Doação</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Doação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>