dev-capec/force-app/main/default/objects/Doacao__c/fields/Assistido__c.field-meta.xml
<CustomField>
    <fullName>Assistido__c</fullName>
    <label>Assistido</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Apenas contatos do tipo Assistido podem receber doações.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Assistido</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Doações</relationshipLabel>
    <relationshipName>Doacoes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>