dev-capec/force-app/main/default/objects/Doacao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Pedido solicitado</fullName>
                <default>true</default>
                <label>Pedido solicitado</label>
            </value>
            <value>
                <fullName>Em análise</fullName>
            </value>
            <value>
                <fullName>Montagem</fullName>
            </value>
            <value>
                <fullName>Liberada</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>